# sql-scheduler

./: .gitignore  README.md  Readme.md  pyproject.toml  setup.py
.github/workflows/: checks.yml  lint.yml  unit_test.yml
scripts/: runUnitTests.sh
sql_scheduler/: __init__.py  _constants.py  _helpers.py  cli.py  exceptions.py  orchestrator.py  sql_scheduler.py  sql_task.py
tests/: orchestrator.test.py  sql_scheduler_helpers.test.py  sql_task.test.py
tests/integration/: integration.py  runIntegrationTests.sh  setup.py
tests/integration/sql/ddl/: prod.table_a.sql  prod.table_b.sql  prod.table_c.sql  prod.table_d.sql
tests/integration/sql/insert/: prod.table_a.sql  prod.table_b.sql  prod.table_c.sql  prod.table_d.sql
tests/sql_orchestrator_test_cases/ddl/: public.a.sql  public.b.sql  public.c.sql  public.circular_2.sql  public.circular_3.sql  public.y.sql
tests/sql_orchestrator_test_cases/insert/: public.circular_1.sql  public.circular_2.sql  public.z.sql
tests/sql_scheduler_helpers_test_cases/ddl/: public.circular_1.sql
tests/sql_scheduler_helpers_test_cases/insert/: public.y.sql
tests/sql_task_replace_for_dev_cases/solution/: public.exhaustive_keywords_no_deps.sql  public.exhaustive_keywords_quotes_table_b_c.sql  public.exhaustive_keywords_spacing_table_b_c.sql  public.exhaustive_keywords_table_b.sql  public.exhaustive_keywords_table_b_c_2.sql
tests/sql_task_replace_for_dev_cases/test/: public.exhaustive_keywords.sql  public.exhaustive_keywords_quotes.sql  public.exhaustive_keywords_spacing.sql
tests/sql_task_test_cases/ddl/: public.caps.sql  public.joins.sql  public.no_deps.sql  public.single_from.sql  public.spacing.sql
tests/sql_task_test_cases/insert/: public.caps.sql  public.joins.sql  public.multiline_comments.sql  public.multiple_from.sql  public.no_deps.sql  public.single_comments.sql  public.single_from.sql  public.spacing.sql
tests/test_cases/ddl/: public.a.sql  public.d.sql  public.z.sql
tests/test_cases/insert/: public.a.sql  public.b.sql  public.c.sql  public.circular_3.sql  public.d.sql
